pokerOnline/kustomize/overlay/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poker-api
  annotations:
    kubernetes.io/ingress.class: app-proxy
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dev.arxcf.com
      http:
        paths:
          - path: /poker/(.*)
            backend:
              serviceName: poker-api
              servicePort: http
